mowyw (0.5.1)
	* mowyw: make mowyw encoding aware, added --encoding option. Default is
	  utf-8
mowyw (0.5.0)
	* mowyw: Moved nearly all functionally to a module to allow better testing
	* mowyw.1.txt: structured documentation in the asciidoc format
	* t/: many more new test files
	* lib/Mowyw.pm: added [% ifvar %] tag
	* lib/Mowyw.pm: added [% bind %] and [% for %] tags
	* lib/Mowyw/Datasource.pm: Added generic datasource interface
	* lib/Mowyw/Datasource/DBI.pm: DBI based SQL backend
	* lib/Mowyw/Datasource/XML.pm: XML::Simple based XML backend
	* Build.PL: install helper script
mowyw (0.4.1)
	* mowyw: Added support for a global include file (includes/global)
	* mowyw: Reads config file, and modifies include filenames according to
	that
mowyw (0.4.0)
	* mowyw: Added support for new delimiters: [% ... %] instead of [[[
	  ... ]]]. Currently they are interchangable, so [% .. ]]] works, but
	  this is considered a bug rather than a feature.
	* README: update accordingly
	* example/source/foo2.shtml: added example [% ... %] tags
mowyw (0.3.0)
	* mowyw: Added support for syntax highliting, variables and comments
	* README: update accordingly
	* example/source/bar.shtml: added syntax hilighting example
	* example/source/style.css: added syntax hilighting classes
	* Mowyw/Lexer.pm: fixed handling of "0" string
mowyw (0.2.0) 
	* Mowyw/Lexer.pm: added a separate lexer
	* mowyw: (nearly) complete rewrite using a recursive-descending parser
	* README: added description for [[[verbatim foo]]] (arbitrary
	stuff)[[[endverbatim foo]]]