@@ -4,4 +4,7 @@ POSTFIX[en]  = .en
 MATCH[de]    = \.de\.
 POSTFIX[de]  = .en
 
+INCLUDE[5]  = \.shtml$
+#EXCLUDE[10] = bar
+
 # vim: expandtab
