@@ -1,0 +1,1 @@
+[%setvar g global%]
