@@ -1,0 +1,1 @@
+[%readvar g%]
