@@ -1,0 +1,14 @@
+use Test::More tests => 2;
+use strict;
+use warnings;
+use Data::Dumper;
+
+BEGIN { use_ok('Mowyw', 'parse_str'); };
+
+my %meta = ( VARS => {}, FILES => [qw(t/include.t)]);
+$Mowyw::config{default}{include} = 't/';
+$Mowyw::config{default}{postfix} = '';
+
+is parse_str('[%setvar t foo %][%include sample-include%]', \%meta),
+    "sample include file !foo!\n",
+    'Can include file, and read variable in the include file';
